# isabelle-repl

./: .gitignore  CHANGELOG.md  README.md  build.sbt
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: README.md  TODO.md  glossary-and-terminology.md  proof-repair-agent-prd.md
docs/architecture/: README.md  intervention-and-review-hooks-architecture.md  overview.md  policy-and-risk-gate-architecture.md  repair-agent-traceability-matrix.md  repair-task-engine-architecture.md  theory-repair-run-architecture.md
docs/architecture/figures/: repair-task-engine.drawio  theory-repair-run.drawio
docs/archive/: DESIGN.md  draft.md
docs/modules/: failure-classification-and-localization-prd.md  intervention-and-review-hooks-prd.md  policy-and-risk-gate-prd.md  repair-state-and-records-prd.md  repair-task-engine-prd.md  theory-repair-orchestrator-prd.md  theory-repair-run-prd.md  theory-repair-run-state-machine-contract.md  theory-repair-run-v1_5-prd.md
docs/repl/: isabelle-repl-architecture.md
docs/superpowers/plans/: 2026-04-24-v1-5-foundation-alignment.md  2026-04-24-v1-5-high-risk-and-engine-hardening.md
docs/testing/: repair-acceptance-gate.md
docs/v1/: README.md
docs/v1_5/: README.md
docs/v1_5/architecture/: repair-agent-traceability-matrix.md
docs/v1_5/contracts/: theory-repair-run-state-machine-contract.md
docs/v1_5/implementation/: 01-incremental-localizer-and-snapshot.md  02-candidate-source-unification.md  03-run-state-and-records-v1_5.md  README.md  task-checklist-and-acceptance.md
project/: plugins.sbt
python/: README.md  proof_repair.py  pyproject.toml
python/config/: repair_policy.toml
python/examples/: README.md  proof_repair_demo.py
python/scripts/: check_repair_acceptance_gate.py  gen_proto.sh  run_repair_once.py
python/src/isa_repl/: __init__.py  client.py  repl_pb2.py  repl_pb2.pyi
python/src/isabelle_repair/: __init__.py
python/src/isabelle_repair/engine/: __init__.py  adapters.py  candidate_source.py  controller.py  generator.py
python/src/isabelle_repair/hooks/: __init__.py  guard.py  static.py
python/src/isabelle_repair/localization/: __init__.py  contracts.py  repl.py
python/src/isabelle_repair/model/: __init__.py  protocols.py  types.py
python/src/isabelle_repair/policy/: __init__.py  config.py  config_loader.py  rules.py
python/src/isabelle_repair/records/: __init__.py  store.py
python/src/isabelle_repair/repl/: __init__.py  minimal.py
python/src/isabelle_repair/run/: __init__.py  observability.py  orchestrator.py  theory_run.py  working_snapshot.py
python/src/isabelle_repl/: __init__.py  client.py  repl_pb2.py  repl_pb2_grpc.py
python/tests/: conftest.py  test_client_unit.py  test_env.py  test_integration_afp.py  test_integration_simple.py  test_smoke.py
python/tests/repair/integration/: test_acceptance_matrix.py  test_life_table_real_review_flow.py  test_run_repair_once_script.py  test_single_theory_flow.py
python/tests/repair/unit/: test_boundaries.py  test_docs_authority.py  test_engine_localization.py  test_orchestrator.py  test_policy_and_hook.py  test_records.py  test_working_snapshot.py
python/tests/repl/integration/: test_integration_afp.py  test_integration_simple.py
python/tests/shared/: __init__.py  repair_fakes.py  runtime_env.py
python/tests/theories/: BrokenReplay.thy  ClassLocalTheoryInfo.thy  LocalTheoryInfo.thy  Simple.thy  SlowReplay.thy  Unprovable.thy
(+17 files in other folders)
