[project]
name = "isa-repl"
version = "0.1.0"
description = "Python client SDK for the Isabelle REPL gRPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["grpcio>=1.78.0", "protobuf>=6.33.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isa_repl"]

[dependency-groups]
dev = ["grpcio-tools>=1.78.0", "pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running Isabelle REPL server (sbt run)"]
