[project]
name = "isa-repl"
version = "0.1.0"
description = "Python client SDK for the Isabelle REPL gRPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["grpcio>=1.78.0", "protobuf>=6.33.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isa_repl"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.8",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: requires a running Isabelle REPL server (sbt run)"]
addopts = [
    "--cov=isa_repl",
    "--cov-report=term-missing",
    "--cov-branch",
    "-ra",
]

[tool.coverage.run]
omit = ["src/isa_repl/repl_pb2.py", "src/isa_repl/repl_pb2_grpc.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
force-exclude = true
extend-exclude = [
    "src/isa_repl/repl_pb2.py",
    "src/isa_repl/repl_pb2.pyi",
    "src/isa_repl/repl_pb2_grpc.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]
# ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
