[project]
name = "isabelle-repl"
version = "0.1.0"
description = "Python client SDK for the Isabelle REPL gRPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["grpcio>=1.78.0", "protobuf>=6.33.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isabelle_repl", "src/isabelle_repair"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.8",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: any integration test requiring a running Isabelle REPL server",
    "integration_local: local integration tests without AFP-heavy dependencies",
    "integration_afp_heavy: AFP-backed integration tests that require AFP checkout",
    "acceptance_gate: curated acceptance suite for repair-agent behavior and doc-contract gate",
]
addopts = [
    "--cov=isabelle_repl",
    "--cov=isabelle_repair",
    "--cov-report=term-missing",
    "--cov-branch",
    "-ra",
]

[tool.coverage.run]
omit = ["src/isabelle_repl/repl_pb2.py", "src/isabelle_repl/repl_pb2_grpc.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
force-exclude = true
extend-exclude = [
    "src/isabelle_repl/repl_pb2.py",
    "src/isabelle_repl/repl_pb2.pyi",
    "src/isabelle_repl/repl_pb2_grpc.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]
# ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
